--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#007BFF"
 backgroundColor = "#0a192f"
-secondaryBackgroundColor = "#112240"
+secondaryBackgroundColor = "#007BFF"
 textColor = "#ffffff"
 font = "sans serif" 
